1.8.2 update